# kokkos-auto-threads-v2

./: CMakeLists.txt  Executor.cpp  KokkosAutoThreads.cpp  LibKokkosAutoThreads.cpp  test.yaml
include/KokkosAutoThreads/: Core.hpp
